--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.4/fetch.min.js"></script>
     <script type="text/javascript" src="/s/info.js"></script>
-    <link type="text/css" rel="stylesheet" href="http://s.filesonload.ru/assets/3.3/vendors.css">
+    <link type="text/css" rel="stylesheet" href="/css/vendors.css">
     </link>
-    <link type="text/css" rel="stylesheet" href="http://s.filesonload.ru/assets/3.3/plp.css">
+    <link type="text/css" rel="stylesheet" href="/css/plp.css">
     </link>
-    <link type="text/css" rel="stylesheet" href="http://s.filesonload.ru/assets/3.3/nodes.css">
+    <link type="text/css" rel="stylesheet" href="/css/nodes.css">
     </link>
-    <link type="text/css" rel="stylesheet" href="http://s.filesonload.ru/assets/3.3/swiper.css">
+    <link type="text/css" rel="stylesheet" href="/css/swiper.css">
     </link>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/brands.css" integrity="sha384-rf1bqOAj3+pw6NqYrtaE1/4Se2NBwkIfeYbsFdtiR6TQz0acWiwJbv1IM/Nt/ite"
@@ -6868,10 +6868,10 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="http://s.filesonload.ru/assets/3.3/vendors.js"></script>
-    <script type="text/javascript" src="http://s.filesonload.ru/assets/3.3/plp.js"></script>
-    <script type="text/javascript" src="http://s.filesonload.ru/assets/3.3/nodes.js"></script>
-    <script type="text/javascript" src="http://s.filesonload.ru/assets/3.3/swiper.js"></script>
+    <script type="text/javascript" src="/js/vendors.js"></script>
+    <script type="text/javascript" src="/js/plp.js"></script>
+    <script type="text/javascript" src="/js/nodes.js"></script>
+    <script type="text/javascript" src="/js/swiper.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
 
     <script>
