--- a/index.html
+++ b/index.html
@@ -4691,7 +4691,7 @@
                             <div class="node node21 widget widget-image">
                                 <div class="wrapper1">
                                     <div class="wrapper2" style="text-align: center; font-size: 72pt">
-                                        EASY INVEST 10
+                                      <img src="/images/apple-icon.png"/>  EASY INVEST 10
                                     </div>
                                 </div>
                             </div>
