--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type='image/png' href="/images/apple-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.4/fetch.min.js"></script>
-    <script type="text/javascript" src="/s/info.js"></script>
+    <script type="text/javascript" src="/js/info.js"></script>
     <link type="text/css" rel="stylesheet" href="/css/vendors.css">
     </link>
     <link type="text/css" rel="stylesheet" href="/css/plp.css">
@@ -55,13 +55,6 @@
             window.console && console.error && console.error(e.message);
         }
             ;
-        // setTimeout(function () {
-        //     try {
-        //         x = new (XMLHttpRequest || ActiveXObject),
-        //             x.open('PUT.html', '/', 1),
-        //             x.send(window.lptag + '\n' + document.referrer + '\n' + (location.pathname + location.search))
-        //     } catch (a) { }
-        // }, 100);
     </script>
 </head>
 <body class="area ">
@@ -4451,24 +4444,30 @@
                                                                                 <div class="node node4 widget widget-menu-button">
                                                                                     <div class="wrapper1">
                                                                                         <div class="wrapper2">
-                                                                                            <!-- <div class="macros-button">
-                                                                                                <div class="btn-out center xs-none">
-                                                                                                    <a class="btn-inner"
-                                                                                                        href="/ru/"
-                                                                                                        target="_self">
-                                                                                                        <button class="btn hvr-fade font-text"
-                                                                                                            id="uid3"
-                                                                                                            data-id=""
-                                                                                                            data-action="link"
-                                                                                                            data-ym_goal=""
-                                                                                                            data-ga_category=""
-                                                                                                            data-ga_action=""
-                                                                                                            need_hover="false">
-                                                                                                            <span class="text">РУС</span>
-                                                                                                        </button>
-                                                                                                    </a>
-                                                                                                </div>
-                                                                                            </div> -->
+                                                                                             <div class="macros-button">                                                                                                
+                                                                                                    <div class="btn-out center xs-none">
+                                                                                                        <a class="btn-inner" href="/index.html" target="_self">
+                                                                                                            <button class="btn hvr-fade font-text" id="uid3" data-id="" data-action="link" data-ym_goal="" data-ga_category="" data-ga_action="" need_hover="false">
+                                                                                                                <span class="text">ENG</span>
+                                                                                                            </button>
+                                                                                                        </a>
+                                                                                                        <a class="btn-inner" href="/ru.html" target="_self">
+                                                                                                            <button class="btn hvr-fade font-text" id="uid311" data-id="" data-action="link" data-ym_goal="" data-ga_category="" data-ga_action="" need_hover="false">
+                                                                                                                <span class="text">РУС</span>
+                                                                                                            </button>
+                                                                                                        </a>
+                                                                                                        <a class="btn-inner" href="/cn.html" target="_self">
+                                                                                                            <button class="btn hvr-fade font-text" id="uid3112" data-id="" data-action="link" data-ym_goal="" data-ga_category="" data-ga_action="" need_hover="false">
+                                                                                                                <span class="text">中文</span>
+                                                                                                            </button>
+                                                                                                        </a>
+                                                                                                        <a class="btn-inner" href="/kr.html" target="_self">
+                                                                                                            <button class="btn hvr-fade font-text" id="Button1" data-id="" data-action="link" data-ym_goal="" data-ga_category="" data-ga_action="" need_hover="false">
+                                                                                                                <span class="text">한국어</span>
+                                                                                                            </button>
+                                                                                                        </a>                                                                                                        
+                                                                                                    </div>
+                                                                                            </div> 
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
