--- a/cn.html
+++ b/cn.html
@@ -4439,7 +4439,7 @@
                                                                                             <div class="wrapper2">
                                                                                                 <div class="macros-button">
                                                                                                     <div class="btn-out center xs-none">
-                                                                                                        <a class="btn-inner" href="/index.html" target="_self">
+                                                                                                        <a class="btn-inner" href="/" target="_self">
                                                                                                             <button class="btn hvr-fade font-text" id="uid3111" data-id="" data-action="link" data-ym_goal="" data-ga_category="" data-ga_action="" need_hover="false">
                                                                                                                 <span class="text">ENG</span>
                                                                                                             </button>
