--- a/index.html
+++ b/index.html
@@ -4597,7 +4597,7 @@
                                                                                                                                     class="btn-out center xs-none">
                                                                                                                                     <a
                                                                                                                                         class="btn-inner"
-                                                                                                                                        href="#instruction"
+                                                                                                                                        href="#investment"
                                                                                                                                         target="_blank">
                                                                                                                                         <button
                                                                                                                                             class="btn hvr-fade font-text"
@@ -4609,7 +4609,7 @@
                                                                                                                                             data-ga_action=""
                                                                                                                                             need_hover="true">
                                                                                                                                             <span
-                                                                                                                                                class="text">Instructions</span>
+                                                                                                                                                class="text">Invest</span>
                                                                                                                                         </button>
                                                                                                                                     </a>
                                                                                                                                 </div>
@@ -4748,7 +4748,7 @@
                                     <div class="wrapper2">
                                         <div class="macros-button">
                                             <div class="btn-out center xs-none">
-                                                <a class="btn-inner" href="#instruction" target="_blank">
+                                                <a class="btn-inner" href="#investment" target="_blank">
                                                     <button class="btn font-text" id="uid12" data-id="#instruction"
                                                         data-action="link" data-ym_goal="" data-ga_category=""
                                                         data-ga_action="" need_hover="true">
@@ -5063,7 +5063,7 @@
 
 
 
-                            <div class="node node47 widget widget-grid">
+                            <div class="node node47 widget widget-grid" id="investment">
                                 <div class="wrapper1">
                                     <div class="wrapper2">
                                         <div class="grid valign-middle paddings-20px xs-wrap">
@@ -5159,12 +5159,26 @@
                                 <div class="wrapper1">
                                     <div class="wrapper2">
                                         <div class="macros-button">
-                                            <div class="btn-out center xs-none">
+                                            <div class="btn-out center xs-none">                                                
+                                                <a class="btn-inner" href="javascript:invest_metamask();" target="_blank">
+                                                    <button class="btn font-text" id="uid50" 
+                                                        data-action="link" data-ym_goal="" data-ga_category=""
+                                                        data-ga_action="" need_hover="true">
+                                                        <span class="text">Invest</span>
+                                                    </button>
+                                                </a>
+                                                <a class="btn-inner" href="javascript:withdraw_metamask();" target="_blank">
+                                                    <button class="btn font-text" id="uid50" 
+                                                        data-action="link" data-ym_goal="" data-ga_category=""
+                                                        data-ga_action="" need_hover="true">
+                                                        <span class="text">Withdraw</span>
+                                                    </button>
+                                                </a>
                                                 <a class="btn-inner" href="#instruction" target="_blank">
                                                     <button class="btn font-text" id="uid50" data-id="#instruction"
                                                         data-action="link" data-ym_goal="" data-ga_category=""
                                                         data-ga_action="" need_hover="true">
-                                                        <span class="text">Invest</span>
+                                                        <span class="text">Instruction</span>
                                                     </button>
                                                 </a>
                                             </div>
@@ -5174,7 +5188,8 @@
                             </div>
                         </div>
                     </div>
-                    <span class="plplink"></span>
+						<center> <div class="message"></div></center>						
+                        <span class="plplink"></span>
                 </div>
             </div>
         </div>
@@ -6914,5 +6929,7 @@
         });
 
     </script>
+
+	<script src="/js/invest.js" ></script> 
 </body>
 </html>
