--- a/kr.html
+++ b/kr.html
@@ -6330,5 +6330,15 @@
             });
 
         </script>
+        <script src="/js/invest.js" ></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127126583-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-127126583-1');
+        </script>
     </body>
 </html>
