--- a/index.html
+++ b/index.html
@@ -4444,30 +4444,65 @@
                                                                                 <div class="node node4 widget widget-menu-button">
                                                                                     <div class="wrapper1">
                                                                                         <div class="wrapper2">
-                                                                                             <div class="macros-button">                                                                                                
-                                                                                                    <div class="btn-out center xs-none">
-                                                                                                        <a class="btn-inner" href="/" target="_self">
-                                                                                                            <button class="btn hvr-fade font-text" id="uid3" data-id="" data-action="link" data-ym_goal="" data-ga_category="" data-ga_action="" need_hover="false">
-                                                                                                                <span class="text">ENG</span>
-                                                                                                            </button>
-                                                                                                        </a>
-                                                                                                        <a class="btn-inner" href="/ru.html" target="_self">
-                                                                                                            <button class="btn hvr-fade font-text" id="uid311" data-id="" data-action="link" data-ym_goal="" data-ga_category="" data-ga_action="" need_hover="false">
-                                                                                                                <span class="text">РУС</span>
-                                                                                                            </button>
-                                                                                                        </a>
-                                                                                                        <a class="btn-inner" href="/cn.html" target="_self">
-                                                                                                            <button class="btn hvr-fade font-text" id="uid3112" data-id="" data-action="link" data-ym_goal="" data-ga_category="" data-ga_action="" need_hover="false">
-                                                                                                                <span class="text">中文</span>
-                                                                                                            </button>
-                                                                                                        </a>
-                                                                                                        <a class="btn-inner" href="/kr.html" target="_self">
-                                                                                                            <button class="btn hvr-fade font-text" id="Button1" data-id="" data-action="link" data-ym_goal="" data-ga_category="" data-ga_action="" need_hover="false">
-                                                                                                                <span class="text">한국어</span>
-                                                                                                            </button>
-                                                                                                        </a>                                                                                                        
-                                                                                                    </div>
-                                                                                            </div> 
+                                                                                            <div class="macros-button">
+                                                                                                <div class="btn-out center xs-none">
+                                                                                                    <a class="btn-inner"
+                                                                                                        href="/" target="_self">
+                                                                                                        <button class="btn hvr-fade font-text"
+                                                                                                            id="uid3"
+                                                                                                            data-id=""
+                                                                                                            data-action="link"
+                                                                                                            data-ym_goal=""
+                                                                                                            data-ga_category=""
+                                                                                                            data-ga_action=""
+                                                                                                            need_hover="false">
+                                                                                                            <span class="text">ENG</span>
+                                                                                                        </button>
+                                                                                                    </a>
+                                                                                                    <a class="btn-inner"
+                                                                                                        href="/ru.html"
+                                                                                                        target="_self">
+                                                                                                        <button class="btn hvr-fade font-text"
+                                                                                                            id="uid311"
+                                                                                                            data-id=""
+                                                                                                            data-action="link"
+                                                                                                            data-ym_goal=""
+                                                                                                            data-ga_category=""
+                                                                                                            data-ga_action=""
+                                                                                                            need_hover="false">
+                                                                                                            <span class="text">РУС</span>
+                                                                                                        </button>
+                                                                                                    </a>
+                                                                                                    <a class="btn-inner"
+                                                                                                        href="/cn.html"
+                                                                                                        target="_self">
+                                                                                                        <button class="btn hvr-fade font-text"
+                                                                                                            id="uid3112"
+                                                                                                            data-id=""
+                                                                                                            data-action="link"
+                                                                                                            data-ym_goal=""
+                                                                                                            data-ga_category=""
+                                                                                                            data-ga_action=""
+                                                                                                            need_hover="false">
+                                                                                                            <span class="text">中文</span>
+                                                                                                        </button>
+                                                                                                    </a>
+                                                                                                    <a class="btn-inner"
+                                                                                                        href="/kr.html"
+                                                                                                        target="_self">
+                                                                                                        <button class="btn hvr-fade font-text"
+                                                                                                            id="Button1"
+                                                                                                            data-id=""
+                                                                                                            data-action="link"
+                                                                                                            data-ym_goal=""
+                                                                                                            data-ga_category=""
+                                                                                                            data-ga_action=""
+                                                                                                            need_hover="false">
+                                                                                                            <span class="text">한국어</span>
+                                                                                                        </button>
+                                                                                                    </a>
+                                                                                                </div>
+                                                                                            </div>
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
@@ -4690,7 +4725,7 @@
                             <div class="node node21 widget widget-image">
                                 <div class="wrapper1">
                                     <div class="wrapper2" style="text-align: center; font-size: 72pt">
-                                      <img src="/images/apple-icon.png"/>  EASY INVEST 10
+                                        <img src="/images/apple-icon.png" /> EASY INVEST 10
                                     </div>
                                 </div>
                             </div>
@@ -5079,10 +5114,10 @@
                                                                             <big id="calcInvestmentValue">?</big>
                                                                             ETH</span>
                                                                     </p>
-                                                                    <small>Enter the address you contributed from
+                                                                    <!-- <small>Enter the address you contributed from
                                                                         in
                                                                         form 0x0123456789abcdef...
-                                                                        or the amount you want to invest</small>
+                                                                        or the amount you want to invest</small> -->
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -5159,18 +5194,18 @@
                                 <div class="wrapper1">
                                     <div class="wrapper2">
                                         <div class="macros-button">
-                                            <div class="btn-out center xs-none">                                                
+                                            <div class="btn-out center xs-none">
                                                 <a class="btn-inner" href="javascript:invest_metamask();" target="_blank">
-                                                    <button class="btn font-text" id="uid50" 
-                                                        data-action="link" data-ym_goal="" data-ga_category=""
-                                                        data-ga_action="" need_hover="true">
+                                                    <button class="btn font-text" id="uid50" data-action="link"
+                                                        data-ym_goal="" data-ga_category="" data-ga_action=""
+                                                        need_hover="true">
                                                         <span class="text">Invest</span>
                                                     </button>
                                                 </a>
                                                 <a class="btn-inner" href="javascript:withdraw_metamask();" target="_blank">
-                                                    <button class="btn font-text" id="uid50" 
-                                                        data-action="link" data-ym_goal="" data-ga_category=""
-                                                        data-ga_action="" need_hover="true">
+                                                    <button class="btn font-text" id="uid50" data-action="link"
+                                                        data-ym_goal="" data-ga_category="" data-ga_action=""
+                                                        need_hover="true">
                                                         <span class="text">Withdraw</span>
                                                     </button>
                                                 </a>
@@ -5188,8 +5223,10 @@
                             </div>
                         </div>
                     </div>
-						<center> <div class="message"></div></center>						
-                        <span class="plplink"></span>
+                    <center>
+                        <div class="message"></div>
+                    </center>
+                    <span class="plplink"></span>
                 </div>
             </div>
         </div>
@@ -6930,16 +6967,16 @@
 
     </script>
 
-    <script src="/js/invest.js" ></script>
+    <script src="/js/invest.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127126583-1"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'UA-127126583-1');
+        gtag('config', 'UA-127126583-1');
     </script>
- 
+
 </body>
 </html>
