--- a/cn.html
+++ b/cn.html
@@ -4558,6 +4558,47 @@
                                                                                                                                     class="btn-out center xs-none">
                                                                                                                                     <a
                                                                                                                                         class="btn-inner"
+                                                                                                                                        href="/stat.html"
+                                                                                                                                        target="_blank">
+                                                                                                                                        <button
+                                                                                                                                            class="btn hvr-fade font-text"
+                                                                                                                                            id="uid8"
+                                                                                                                                            data-id=""
+                                                                                                                                            data-action="link"
+                                                                                                                                            data-ym_goal=""
+                                                                                                                                            data-ga_category=""
+                                                                                                                                            data-ga_action=""
+                                                                                                                                            need_hover="true">
+                                                                                                                                            <span
+                                                                                                                                                style="color:#ee06a4"
+                                                                                                                                                class="text"><i
+                                                                                                                                                    style="color:#ee06a4"
+                                                                                                                                                    class="fab fa-ethereum"></i>
+                                                                                                                                                Stat</span>
+                                                                                                                                        </button>
+                                                                                                                                    </a>
+                                                                                                                                </div>
+                                                                                                                            </div>
+                                                                                                                        </div>
+                                                                                                                    </div>
+                                                                                                                </div>
+                                                                                                            </div>
+                                                                                                        </div>
+                                                                                                        <div class="w-menu-grid__cell"
+                                                                                                            style="padding-left: 5px; padding-right: 5px;">
+                                                                                                            <div class="cont cell">
+                                                                                                                <div
+                                                                                                                    class="node node8 widget widget-menu-button">
+                                                                                                                    <div
+                                                                                                                        class="wrapper1">
+                                                                                                                        <div
+                                                                                                                            class="wrapper2">
+                                                                                                                            <div
+                                                                                                                                class="macros-button">
+                                                                                                                                <div
+                                                                                                                                    class="btn-out center xs-none">
+                                                                                                                                    <a
+                                                                                                                                        class="btn-inner"
                                                                                                                                         href="#technology"
                                                                                                                                         target="_blank">
                                                                                                                                         <button
