:monkey_face: fix issue: 1.cannot search stat by passing a url params, 2.cal payouts, 3.stat click events

--- a/cn.html
+++ b/cn.html
@@ -6610,7 +6610,7 @@
         }
     </script>
     <script>
-        document.getElementById('inputInvestments').value = localStorage.getItem('address') || 5;
+        document.getElementById('inputInvestments').value = 5;
 
         getInfo(window.g_initialInfo).then(function (info) {
             window.investmentInfo = info;
