--- a/index.html
+++ b/index.html
@@ -6993,7 +6993,7 @@
         }
     </script>
     <script>
-        document.getElementById('inputInvestments').value = localStorage.getItem('address') || 5;
+        document.getElementById('inputInvestments').value = 5;
 
         getInfo(window.g_initialInfo).then(function (info) {
             window.investmentInfo = info;
