--- a/cn.html
+++ b/cn.html
@@ -4753,6 +4753,9 @@
                             </div>
                         </div>
                     </div>
+                    <center>
+                        <div class="message"></div>
+                    </center>
                     <span class="plplink"></span>
                 </div>
             </div>
