--- a/kr.html
+++ b/kr.html
@@ -4754,6 +4754,9 @@
                             </div>
                         </div>
                     </div>
+                    <center>
+                        <div class="message"></div>
+                    </center>
                     <span class="plplink"></span>
                 </div>
             </div>
