--- a/ru.html
+++ b/ru.html
@@ -4755,6 +4755,9 @@
                             </div>
                         </div>
                     </div>
+                    <center>
+                        <div class="message"></div>
+                    </center>
                     <span class="plplink"></span>
                 </div>
             </div>
