--- a/index.html
+++ b/index.html
@@ -6866,7 +6866,7 @@
                                                                             <p style="text-align: center;">
                                                                                 <span style="font-size: 12px;">©
                                                                                     2018
-                                                                                    EasyInvest10</span>
+                                                                                    EasyInvest10 v1.0.1</span>
                                                                             </p>
                                                                         </div>
                                                                     </div>
