--- a/cn.html
+++ b/cn.html
@@ -6486,7 +6486,7 @@
                                                                         <div class="xs-force-center textable" style="opacity: 0.45;">
                                                                             <p style="text-align: center;">
                                                                                 <span style="font-size: 12px;">© 2018
-                                                                                    EasyInvest10</span>
+                                                                                    EasyInvest10 v1.0.1</span>
                                                                             </p>
                                                                         </div>
                                                                     </div>
